tests/dataset/tpc-ds/compiler/st/q63.st.out
Smalltalk at: #by_mgr put: nil.
Smalltalk at: #result put: nil.
Smalltalk at: #sales put: nil.

Object subclass: #Main instanceVariableNames: '' classVariableNames: '' poolDictionaries: '' category: nil!

!Main class methodsFor: 'tests'!
test_TPCDS_Q63_simplified
	((result = 63)) ifFalse: [ self error: 'expect failed' ]
!

Object subclass: #_Group instanceVariableNames: 'key items' classVariableNames: '' poolDictionaries: '' category: nil!

!_Group class methodsFor: 'instance creation'!
key: k | g |
	g := self new.
	g key: k.
	g initialize.
	^ g
!
!_Group methodsFor: 'initialization'!
initialize
	items := OrderedCollection new.
	^ self
!
!_Group methodsFor: 'accessing'!
key
	^ key
!
key: k
	key := k
!
add: it
	items add: it
!
do: blk
	items do: blk
!
size
	^ items size
!
!Main class methodsFor: 'runtime'!
__sum: v
	(v respondsTo: #do:) ifFalse: [ ^ self error: 'sum() expects collection' ]
	| s |
	s := 0.
	v do: [:it | s := s + it].
	^ s
!
_group_by: src keyFn: blk
	| groups order |
	groups := Dictionary new.
	order := OrderedCollection new.
	src do: [:it |
		| key ks g |
		key := blk value: it.
		ks := key printString.
		g := groups at: ks ifAbsentPut: [ |_g | _g := _Group key: key. order add: ks. groups at: ks put: _g. _g ].
		g add: it.
	]
	^ order collect: [:k | groups at: k ]
!
!!
sales := Array with: (Dictionary from: {'mgr' -> 1. 'amount' -> 30}) with: (Dictionary from: {'mgr' -> 2. 'amount' -> 33}).
by_mgr := ((| rows groups |
rows := OrderedCollection new.
(sales) do: [:s |
	rows add: s.
]
groups := (Main _group_by: rows keyFn: [:s | Dictionary from: {'mgr' -> s at: 'mgr'}]).
rows := OrderedCollection new.
(groups) do: [:g |
	rows add: Dictionary from: {'mgr' -> g at: 'key' at: 'mgr'. 'sum_sales' -> (Main __sum: ((| res |
res := OrderedCollection new.
(g) do: [:x |
	res add: x at: 'amount'.
]
res := res asArray.
res)))}.
]
rows := rows asArray.
rows)).
result := (Main __sum: ((| res |
res := OrderedCollection new.
(by_mgr) do: [:x |
	res add: x at: 'sum_sales'.
]
res := res asArray.
res))).
(result toJSON) displayOn: Transcript. Transcript cr.
Main test_TPCDS_Q63_simplified.
